# ferrus

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  ferrus.toml  install.ps1  install.sh  test_pid.rs
.agents/skills/ferrus/: SKILL.md
.agents/skills/ferrus-executor/: ROLE.md  SKILL.md
.agents/skills/ferrus-supervisor/: ROLE.md  SKILL.md
.cargo/: config.toml
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/    ISSUE_TEMPLATE/: bug_report.yml  workflow.yml
.github/ISSUE_TEMPLATE/: config.yml  idea.yml
.github/workflows/: mirror.yml  publish.yml  rust.yml
docs/: milestones.md
docs/plans/: 2026-03-15-lease-heartbeat.md  2026-03-17-ferrus-hq.md  2026-03-18-ferrus-hq-phase-b.md  2026-04-09-command-role-redesign.md
docs/specs/: 2026-05-22-multi-task-sqlite-dashboard.md
docs/superpowers/specs/: 2026-03-15-lease-heartbeat-design.md  2026-04-09-ferrus-command-role-redesign.md
src/: agent_id.rs  legacy_state.rs  main.rs  platform.rs  project.rs  pty.rs  runtime_status.rs  runtime_table.rs  specs.rs  templates.rs  update_check.rs
src/agents/: mod.rs
src/agents/claude/: mod.rs
src/agents/codex/: mod.rs
src/agents/qwen/: mod.rs
src/checks/: runner.rs
src/cli/: mod.rs
src/cli/commands/: doctor.rs  events.rs  init.rs  migrate.rs  mod.rs  projects.rs  recover.rs  register.rs  runs.rs  serve.rs  tasks.rs
src/config/: claude.rs  mod.rs
src/hq/: agent_manager.rs  commands.rs  display.rs  mod.rs  repl.rs  state_watcher.rs  tui.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/platform/unix/: linux.rs  mod.rs
src/server/: mod.rs  prompts.rs  resources.rs
src/server/tools/: answer.rs  approve.rs  ask_human.rs  check.rs  check_gate.rs  consult.rs  create_spec.rs  create_task.rs  enqueue_task.rs  heartbeat.rs  mod.rs  next_task.rs  reject.rs  reset.rs  respond_consult.rs  review_pending.rs  status.rs  submit.rs  wait_for_answer.rs  wait_for_consult.rs  wait_for_consultation.rs  wait_for_review.rs  wait_for_task.rs
src/state/: agents.rs  machine.rs  mod.rs  store.rs
