[package]
name = "ferrus"
version = "0.2.2-alpha.6"
edition = "2021"
license = "Apache-2.0"
description = "AI agent orchestrator - drives a Supervisor–Executor workflow for autonomous software development"

[[bin]]
name = "ferrus" 
path = "src/main.rs"

[dependencies]
neva = { version = "0.3.2", features = ["server"] }
tokio = { version = "1.51.1", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
fs2 = "0.4.3"
shlex = "1.3.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
