[package]
name = "ferrus"
version = "0.2.6-alpha.4"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0"
repository = "https://github.com/RomanEmreis/ferrus"
readme = "README.md"
homepage = "https://romanemreis.github.io/ferrus-docs/"
description = "AI agent orchestrator - drives a Supervisor–Executor workflow for autonomous software development"
exclude = [
    ".agents/**",
    ".github/**",
    ".gitignore",
    "AGENTS.md",
    "CLAUDE.md",
    "docs/**",
    "ferrus.toml",
]

[[bin]]
name = "ferrus" 
path = "src/main.rs"

[dependencies]
neva = { version = "0.3.2", features = ["server"] }
tokio = { version = "1.52.1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
toml_edit = "0.22.27"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde", "std"] }
fs2 = "0.4.3"
shlex = "1.3.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
semver = "1.0.28"
ureq = { version = "3", default-features = false, features = ["rustls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
